crates/mabo-parser/tests/inputs/invalid/const_name.mabo
const vALUE: u32 = 1;
